For Heroku deployment.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,10 +26,10 @@
 <div class="row">
 	<div class="col-md-4 col-sm-12">
 		<a href="http://localhost:3000/search?utf8=%E2%9C%93&search=new+york">
-			<div class="discovery-card" style="background-image: url('/assets/New_Town_Park.jpg')">
+			<div class="discovery-card" style="background-image: url('/assets/Feel.png')">
 				<div class="va-container">
 					<div class="va-middle text-center">
-						<h2><strong>新城公园</strong></h2>
+						<h2><strong>体验</strong></h2>
 					</div>
 				</div>
 			</div>
@@ -38,10 +38,10 @@
 
 	<div class="col-md-4 col-sm-6">
 		<a href="http://localhost:3000/search?utf8=%E2%9C%93&search=london">
-			<div class="discovery-card" style="background-image: url('/assets/West_Bank.jpg')">
+			<div class="discovery-card" style="background-image: url('/assets/Taste.png')">
 				<div class="va-container">
 					<div class="va-middle text-center">
-						<h2><strong>西岸氧吧</strong></h2>
+						<h2><strong>品尝</strong></h2>
 					</div>
 				</div>
 			</div>
@@ -50,10 +50,10 @@
 
 	<div class="col-md-4 col-sm-6">
 		<a href="http://localhost:3000/search?utf8=%E2%9C%93&search=berlin">
-			<div class="discovery-card" style="background-image: url('/assets/The_Road.jpg')">
+			<div class="discovery-card" style="background-image: url('/assets/DIY.png')">
 				<div class="va-container">
 					<div class="va-middle text-center">
-						<h2><strong>东平国家森林公园</strong></h2>
+						<h2><strong>DIY</strong></h2>
 					</div>
 				</div>
 			</div>
