--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,16 +51,16 @@ body {
 }
 
 .navbar-default .navbar-brand {
-  color: #FF5A5F;
+  color: #b4d23f;
   font-size: 2em;
   font-weight: 400;
 }
 
 .btn-primary.btn {
-  border: 1px solid #ff5a5f;
+  border: 1px solid #b4d23f;
   border-radius: 2px;
   font-weight: bold;
-  background-color: #ff5a5f;
+  background-color: #b4d23f;
   color: #fff;
   padding: 10px 25px 10px 25px;
 }
@@ -199,7 +199,7 @@ input[type="checkbox"]:checked:before {
   font-size: 0.95em;
   text-align: center;
   width: 1.25em;
-  color: #ff5a5f;
+  color: #b4d23f;
 }
 
 .btn-file {
